<resources>
    <string name="app_name">WorldCinema</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description">null</string>
    <string name="main">Главное</string>
    <string name="compilation">Подборка</string>
    <string name="collections">Коллекции</string>
    <string name="profile">Профиль</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="register">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="already_have_account">У меня уже есть аккаунт</string>
    <string name="error_dialog_title">Ошибка!</string>
    <string name="error_dialog_button">Ок</string>
    <string name="wrong_email_format">Неверный формат почты</string>
    <string name="empty_input">Заполнены не все поля</string>
    <string name="password_not_equal_with_confirm">Поля пароль и подтвердите пароль не совпадают</string>
    <string name="exit">Выход</string>
    <string name="change">Изменить</string>
    <string name="discussion">Обсуждения</string>
    <string name="history">История</string>
    <string name="settings">Настройки</string>
    <string name="load_avatar">Загрузка аватарки</string>
    <string name="choosing_method_load">Выберите откуда загрузить фото</string>
    <string name="from_gallery">С галереи</string>
    <string name="create_photo">Сделать фотографию</string>
    <string name="watch">Смотреть</string>
    <string name="in_trend">В тренде</string>
    <string name="your_watched">Вы смотрели</string>
    <string name="new_movie">Новое</string>
    <string name="for_your">Для вас</string>
    <string name="specify_interests">Указать интересы</string>
    <string name="description">Описание</string>
    <string name="frames">Кадры</string>
    <string name="episodes">Эпизоды</string>
    <string name="compilation_empty">Новые фильмы \nв подборке закончились</string>
    <string name="create_collection">Создать коллекцию</string>
    <string name="change_collection">Изменить коллекцию</string>
    <string name="name_edit_collection">Название</string>
    <string name="choosing_icon">Выбрать иконку</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="collection_name_empty">Имя коллекции не может быть пустым</string>
    <string name="custom_favour_collection">Нельзя создать коллекцию с именем "Избранное"</string>
    <string name="favour_collection_not_found">Коллекция "Избранное" не найдена</string>
    <string name="warning">Предупреждение</string>
    <string name="delete_film">Удалить фильм из коллекции?</string>
    <string name="cancel">Отмена</string>
    <string name="write_message">Напишите сообщение…</string>
    <string name="january">Января</string>
    <string name="february">Февраля</string>
    <string name="march">Марта</string>
    <string name="april">Апреля</string>
    <string name="may">Мая</string>
    <string name="june">Июня</string>
    <string name="july">Июля</string>
    <string name="august">Августа</string>
    <string name="september">Сентября</string>
    <string name="october">Октября</string>
    <string name="november">Ноября</string>
    <string name="december">Декабря</string>
    <string name="today">Сегодня</string>
    <string name="send_empty_message">Нельзя отправить пустое сообщение</string>
</resources>