<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <ImageView
        android:id="@+id/posterFilmCollectionItem"
        android:layout_width="56dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameFilmCollectionItem"
        style="@style/text_small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/posterFilmCollectionItem"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/change" />

    <TextView
        android:id="@+id/descriptionFilmCollectionItem"
        style="@style/text_body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:lineSpacingExtra="1sp"
        android:maxLines="3"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/posterFilmCollectionItem"
        app:layout_constraintTop_toBottomOf="@+id/nameFilmCollectionItem"
        tools:text="@string/choosing_method_load" />
</androidx.constraintlayout.widget.ConstraintLayout>